--- a/public/theme/client/assets/css/style.css
+++ b/public/theme/client/assets/css/style.css
@@ -4903,79 +4903,79 @@ table p {
     padding: 22px 55px 21px;
 }
 
-.product-single-item .product-single-info .product-color {
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    margin-bottom: 30px;
-    margin-top: 32px;
-}
+/*.product-single-item .product-single-info .product-color {*/
+/*    -webkit-box-align: center;*/
+/*    -ms-flex-align: center;*/
+/*    align-items: center;*/
+/*    display: -webkit-box;*/
+/*    display: -ms-flexbox;*/
+/*    display: flex;*/
+/*    margin-bottom: 30px;*/
+/*    margin-top: 32px;*/
+/*}*/
 
-.product-single-item .product-single-info .product-color .title {
-    color: #1d1d1d;
-    font-size: 18px;
-    font-weight: 400;
-    line-height: 1;
-    margin-right: 22px;
-    margin-bottom: 0;
-}
+/*.product-single-item .product-single-info .product-color .title {*/
+/*    color: #1d1d1d;*/
+/*    font-size: 18px;*/
+/*    font-weight: 400;*/
+/*    line-height: 1;*/
+/*    margin-right: 22px;*/
+/*    margin-bottom: 0;*/
+/*}*/
 
-.product-single-item .product-single-info .product-color .color-list {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    margin-bottom: 0;
-}
+/*.product-single-item .product-single-info .product-color .color-list {*/
+/*    display: -webkit-box;*/
+/*    display: -ms-flexbox;*/
+/*    display: flex;*/
+/*    margin-bottom: 0;*/
+/*}*/
 
-.product-single-item .product-single-info .product-color .color-list li {
-    border: 3px solid #fff;
-    border-radius: 50%;
-    cursor: pointer;
-    display: inline-block;
-    height: 40px;
-    position: relative;
-    width: 40px;
-    z-index: 1;
-}
+/*.product-single-item .product-single-info .product-color .color-list li {*/
+/*    border: 3px solid #fff;*/
+/*    border-radius: 50%;*/
+/*    cursor: pointer;*/
+/*    display: inline-block;*/
+/*    height: 40px;*/
+/*    position: relative;*/
+/*    width: 40px;*/
+/*    z-index: 1;*/
+/*}*/
 
-.product-single-item .product-single-info .product-color .color-list li + li {
-    margin-left: 12px;
-}
+/*.product-single-item .product-single-info .product-color .color-list li + li {*/
+/*    margin-left: 12px;*/
+/*}*/
 
-.product-single-item .product-single-info .product-color .color-list li:before {
-    border: 1px solid #d5d5d5;
-    border-radius: 50%;
-    content: "";
-    height: calc(100% + 6px);
-    left: 50%;
-    position: absolute;
-    top: 50%;
-    width: calc(100% + 6px);
-    transform: translate(-50%, -50%);
-    -webkit-transform: translate(-50%, -50%);
-    -moz-transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-    -o-transform: translate(-50%, -50%);
-    transition: all 0.3s ease-out;
-    -webkit-transition: all 0.3s ease-out;
-    -moz-transition: all 0.3s ease-out;
-    -ms-transition: all 0.3s ease-out;
-    -o-transition: all 0.3s ease-out;
-    z-index: -1;
-}
+/*.product-single-item .product-single-info .product-color .color-list li:before {*/
+/*    border: 1px solid #d5d5d5;*/
+/*    border-radius: 50%;*/
+/*    content: "";*/
+/*    height: calc(100% + 6px);*/
+/*    left: 50%;*/
+/*    position: absolute;*/
+/*    top: 50%;*/
+/*    width: calc(100% + 6px);*/
+/*    transform: translate(-50%, -50%);*/
+/*    -webkit-transform: translate(-50%, -50%);*/
+/*    -moz-transform: translate(-50%, -50%);*/
+/*    -ms-transform: translate(-50%, -50%);*/
+/*    -o-transform: translate(-50%, -50%);*/
+/*    transition: all 0.3s ease-out;*/
+/*    -webkit-transition: all 0.3s ease-out;*/
+/*    -moz-transition: all 0.3s ease-out;*/
+/*    -ms-transition: all 0.3s ease-out;*/
+/*    -o-transition: all 0.3s ease-out;*/
+/*    z-index: -1;*/
+/*}*/
 
-.product-single-item .product-single-info .product-color .color-list li.active:before {
-    border-color: #eb3e32;
-}
+/*.product-single-item .product-single-info .product-color .color-list li.active:before {*/
+/*    border-color: #eb3e32;*/
+/*}*/
 
-.product-single-item .product-single-info .product-color .color-list li:hover:before {
-    border-color: #eb3e32;
-}
+/*.product-single-item .product-single-info .product-color .color-list li:hover:before {*/
+/*    border-color: #eb3e32;*/
+/*}*/
 
-.product-single-item .product-single-info .product-size {
+.product-single-item .product-single-info .product-attribute {
     -webkit-box-align: center;
     -ms-flex-align: center;
     align-items: center;
@@ -4985,7 +4985,7 @@ table p {
     margin-bottom: 40px;
 }
 
-.product-single-item .product-single-info .product-size .title {
+.product-single-item .product-single-info .product-attribute .title {
     color: #1d1d1d;
     font-size: 18px;
     font-weight: 400;
@@ -4994,62 +4994,63 @@ table p {
     margin-bottom: 0;
 }
 
-.product-single-item .product-single-info .product-size .size-list {
+.product-single-item .product-single-info .product-attribute .attribute-list {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+    gap: 10px;
     margin-bottom: 0;
 }
 
-.product-single-item .product-single-info .product-size .size-list li {
-    background-color: #e1e1e1;
-    border: 3px solid #fff;
-    border-radius: 50%;
-    color: #525252;
-    cursor: pointer;
-    font-size: 16px;
-    display: inline-block;
-    height: 40px;
-    line-height: 35px;
-    position: relative;
-    text-align: center;
-    width: 40px;
-    z-index: 1;
-}
+/*.product-single-item .product-single-info .product-attribute .attribute-list li {*/
+/*    background-color: #e1e1e1;*/
+/*    border: 3px solid #fff;*/
+/*    border-radius: 50%;*/
+/*    color: #525252;*/
+/*    cursor: pointer;*/
+/*    font-size: 16px;*/
+/*    display: inline-block;*/
+/*    height: 40px;*/
+/*    line-height: 35px;*/
+/*    position: relative;*/
+/*    text-align: center;*/
+/*    width: 40px;*/
+/*    z-index: 1;*/
+/*}*/
 
-.product-single-item .product-single-info .product-size .size-list li + li {
-    margin-left: 12px;
-}
+/*.product-single-item .product-single-info .product-attribute .attribute-list li + li {*/
+/*    margin-left: 12px;*/
+/*}*/
 
-.product-single-item .product-single-info .product-size .size-list li:before {
-    border: 1px solid #d5d5d5;
-    border-radius: 50%;
-    content: "";
-    height: calc(100% + 6px);
-    left: 50%;
-    position: absolute;
-    top: 50%;
-    width: calc(100% + 6px);
-    transform: translate(-50%, -50%);
-    -webkit-transform: translate(-50%, -50%);
-    -moz-transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-    -o-transform: translate(-50%, -50%);
-    transition: all 0.3s ease-out;
-    -webkit-transition: all 0.3s ease-out;
-    -moz-transition: all 0.3s ease-out;
-    -ms-transition: all 0.3s ease-out;
-    -o-transition: all 0.3s ease-out;
-    z-index: -1;
-}
+/*.product-single-item .product-single-info .product-attribute .attribute-list li:before {*/
+/*    border: 1px solid #d5d5d5;*/
+/*    border-radius: 50%;*/
+/*    content: "";*/
+/*    height: calc(100% + 6px);*/
+/*    left: 50%;*/
+/*    position: absolute;*/
+/*    top: 50%;*/
+/*    width: calc(100% + 6px);*/
+/*    transform: translate(-50%, -50%);*/
+/*    -webkit-transform: translate(-50%, -50%);*/
+/*    -moz-transform: translate(-50%, -50%);*/
+/*    -ms-transform: translate(-50%, -50%);*/
+/*    -o-transform: translate(-50%, -50%);*/
+/*    transition: all 0.3s ease-out;*/
+/*    -webkit-transition: all 0.3s ease-out;*/
+/*    -moz-transition: all 0.3s ease-out;*/
+/*    -ms-transition: all 0.3s ease-out;*/
+/*    -o-transition: all 0.3s ease-out;*/
+/*    z-index: -1;*/
+/*}*/
 
-.product-single-item .product-single-info .product-size .size-list li.active:before {
-    border-color: #eb3e32;
-}
+/*.product-single-item .product-single-info .product-attribute .attribute-list li.active:before {*/
+/*    border-color: #eb3e32;*/
+/*}*/
 
-.product-single-item .product-single-info .product-size .size-list li:hover:before {
-    border-color: #eb3e32;
-}
+/*.product-single-item .product-single-info .product-attribute .attribute-list li:hover:before {*/
+/*    border-color: #eb3e32;*/
+/*}*/
 
 .product-single-item .product-single-info .product-wishlist-compare {
     border-bottom: 1px solid #c8c8c8;
@@ -9005,16 +9006,16 @@ table p {
     margin-bottom: 23px;
 }
 
-.shop-sidebar-size .size-list {
+.shop-sidebar-size .attribute-list {
     margin-bottom: 0;
 }
 
-.shop-sidebar-size .size-list > li {
+.shop-sidebar-size .attribute-list > li {
     display: block;
     line-height: 1;
 }
 
-.shop-sidebar-size .size-list > li > a {
+.shop-sidebar-size .attribute-list > li > a {
     color: #8a8a8a;
     font-size: 16px;
     font-weight: 500;
@@ -9023,7 +9024,7 @@ table p {
     text-transform: uppercase;
 }
 
-.shop-sidebar-size .size-list > li > a:hover {
+.shop-sidebar-size .attribute-list > li > a:hover {
     color: #eb3e32;
 }
 
