--- a/public/theme/client/assets/css/style.css
+++ b/public/theme/client/assets/css/style.css
@@ -6890,11 +6890,11 @@ table p {
     margin-bottom: 22px;
 }
 
-.shopping-checkout-wrap .checkout-page-coupon-wrap .coupon-accordion .card .card-body .apply-coupon-wrap form .form-group {
+.shopping-checkout-wrap .checkout-page-coupon-wrap .coupon-accordion .card .card-body .apply-coupon-wrap .form-group {
     margin-bottom: 30px;
 }
 
-.shopping-checkout-wrap .checkout-page-coupon-wrap .coupon-accordion .card .card-body .apply-coupon-wrap form .form-group .form-control {
+.shopping-checkout-wrap .checkout-page-coupon-wrap .coupon-accordion .card .card-body .apply-coupon-wrap .form-group .form-control {
     border: 1px solid #e8e8e8;
     border-radius: 0;
     -webkit-box-shadow: none;
@@ -6926,7 +6926,7 @@ table p {
     color: #626262;
 }
 
-.shopping-checkout-wrap .checkout-page-coupon-wrap .coupon-accordion .card .card-body .apply-coupon-wrap form .btn-coupon {
+.shopping-checkout-wrap .checkout-page-coupon-wrap .coupon-accordion .card .card-body .apply-coupon-wrap .btn-coupon {
     background-color: #333131;
     border: none;
     color: #fff;
@@ -6941,30 +6941,30 @@ table p {
 }
 
 @media only screen and (max-width: 991px) {
-    .shopping-checkout-wrap .checkout-page-coupon-wrap .coupon-accordion .card .card-body .apply-coupon-wrap form .btn-coupon {
+    .shopping-checkout-wrap .checkout-page-coupon-wrap .coupon-accordion .card .card-body .apply-coupon-wrap .btn-coupon {
         margin-left: 0;
     }
 }
 
-.shopping-checkout-wrap .checkout-page-coupon-wrap .coupon-accordion .card .card-body .apply-coupon-wrap form .btn-coupon:hover {
+.shopping-checkout-wrap .checkout-page-coupon-wrap .coupon-accordion .card .card-body .apply-coupon-wrap .btn-coupon:hover {
     background-color: #eb3e32;
 }
 
-.shopping-checkout-wrap .checkout-billing-details-wrap .billing-form-wrap form .form-group {
+.shopping-checkout-wrap .checkout-billing-details-wrap .billing-form-wrap .form-group {
     margin-bottom: 20px;
 }
 
-.shopping-checkout-wrap .checkout-billing-details-wrap .billing-form-wrap form .form-group label {
+.shopping-checkout-wrap .checkout-billing-details-wrap .billing-form-wrap .form-group label {
     font-size: 14px;
     color: #333131;
     margin-bottom: 8px;
 }
 
-.shopping-checkout-wrap .checkout-billing-details-wrap .billing-form-wrap form .form-group label .required {
+.shopping-checkout-wrap .checkout-billing-details-wrap .billing-form-wrap .form-group label .required {
     color: #f00;
 }
 
-.shopping-checkout-wrap .checkout-billing-details-wrap .billing-form-wrap form .form-group .form-control {
+.shopping-checkout-wrap .checkout-billing-details-wrap .billing-form-wrap .form-group .form-control {
     border-radius: 0;
     -webkit-box-shadow: none;
     box-shadow: none;
@@ -7000,7 +7000,7 @@ table p {
     border-color: #333131;
 }
 
-.shopping-checkout-wrap .checkout-billing-details-wrap .billing-form-wrap form .form-group textarea.form-control {
+.shopping-checkout-wrap .checkout-billing-details-wrap .billing-form-wrap .form-group textarea.form-control {
     border: none;
     min-height: 120px;
     line-height: inherit;
@@ -11127,4 +11127,9 @@ table p {
     color: #eb3e32;
     font-size: 16px;
     margin: 0 2px;
+}
+
+.error-notification{
+    color: red;
+    font-size: 12px;
 }
