--- a/public/theme/client/assets/css/style.css
+++ b/public/theme/client/assets/css/style.css
@@ -11129,7 +11129,96 @@ table p {
     margin: 0 2px;
 }
 
+ /*custom*/
+
 .error-notification{
     color: red;
     font-size: 12px;
 }
+
+/*chat box*/
+
+.chat-box {
+    width: 300px;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    z-index: 9999;
+    /*bottom: 80px;*/
+}
+
+.chat-header {
+    border-radius: 8px 8px 0 0;
+    cursor: pointer;
+}
+
+.chat-footer {
+    border-radius: 0 0 8px 8px;
+}
+
+.chat-box-list {
+    list-style: none;
+}
+
+.chat-box-list li {
+    margin-bottom: 20px;
+    position: relative;
+}
+
+.chat-box-list li .chat-conversation-text {
+    margin-bottom: 0.375rem;
+}
+
+/*.chat-box-list li .chat-conversation-text:first-child::before {*/
+/*    content: "";*/
+/*    position: absolute;*/
+/*    left: 0;*/
+/*    top: 0;*/
+/*    border: solid transparent;*/
+/*    height: 0;*/
+/*    width: 0;*/
+/*    border-top-color: var(--bs-tertiary-bg);*/
+/*    border-width: 6px;*/
+/*    margin-right: -1px;*/
+/*    border-right-color: var(--bs-tertiary-bg);*/
+/*}*/
+
+
+.chat-box-list li:last-child {
+    margin-bottom: 0;
+}
+
+.chat-ctext-wrap {
+    background: #bbbec1;
+    border-radius: 0 0.5rem 0.5rem;
+    display: inline-block;
+    padding: 0.5rem 1rem;
+    position: relative;
+    max-width: 750px;
+    margin-left: 10px;
+}
+
+.chat-ctext-wrap p {
+    margin: 0;
+    padding: 0;
+}
+
+.odd .chat-conversation-text {
+    float: right !important;
+    text-align: right !important;
+    margin-right: 10px;
+}
+
+.odd .chat-conversation-text:first-child::before {
+    border-color: transparent;
+    border-left-color: #ff6c2f;
+    border-top-color: #ff6c2f;
+    right: 3px;
+    left: auto;
+}
+
+.odd .chat-ctext-wrap {
+    background-color: #ff6c2f;
+    color: #ffffff;
+    border-radius: 0.5rem 0 0.5rem 0.5rem;
+}
+
